fixing button alignment for small screens

--- a/styles.css
+++ b/styles.css
@@ -621,7 +621,7 @@ details[open] {
     }
 
     button {
-        width: 100%;
+        /* width: 100%; */
         max-width: none;
         margin: 3px 0;
     }
